--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -168,8 +168,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: var(--header-height);
-  background-color: var(--first-color);
+  background-color: var(--body-color);
   z-index: var(--z-fixed);
 }
 
@@ -178,6 +177,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  list-style:none ;
 
 }
 
@@ -187,9 +187,46 @@ img {
   transition: .4s;
 }
 
-.nav__logo:hover {
+.nav__logo:hover{
   color: var(--first-color-alt);
 }
+
+
+.nav__menu{
+  position: fixed;
+  bottom: 1rem;
+  background-color: hsl(var(--second-hue), 32%, 16%, .8);
+  width: 90%;
+  border-radius: 4rem;
+  padding: 1rem 2.25rem;
+  backdrop-filter: blur(10px);
+
+}
+
+.nav__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.nav__link {
+  color: var(--text-color);
+  font-size: 1.25rem;
+  padding: .4rem;
+  display: flex;
+  border-radius: 5rem;
+
+}
+
+.active-link {
+  background: linear-gradient(180deg,
+      hsla(var(--first-hue), var(--sat), var(--lig), 1),
+      hsla(var(--first-hue), var(--sat), var(--lig), .2));
+  box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), .4);
+
+}
+
 
 /* 17.52 */
 /* Active link */
