--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,6 +98,11 @@ ul {
   list-style: none;
 }
 
+li {
+  display: inline-block;
+}
+
+
 a {
   text-decoration: none;
 }
@@ -177,7 +182,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  list-style:none ;
+  list-style: none;
 
 }
 
@@ -187,12 +192,12 @@ img {
   transition: .4s;
 }
 
-.nav__logo:hover{
+.nav__logo:hover {
   color: var(--first-color-alt);
 }
 
 
-.nav__menu{
+.nav__menu {
   position: fixed;
   bottom: 1rem;
   background-color: hsl(var(--second-hue), 32%, 16%, .8);
