--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -243,7 +243,21 @@ img {
 
 
 /*=============== HOME ===============*/
+.home__container {
+  position: relative;
+  row-gap: 4.5rem;
+  padding-top: 2rem;
+}
 
+.home__data {
+  text-align: center;
+}
+
+.home__greeting,
+.home__education {
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+}
 
 /*=============== BUTTONS ===============*/
 
