--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -281,6 +281,16 @@ img {
 }
 .home__handle{
   justify-self: center;
+  width: 190px;
+  height: 293px;
+  background: linear-gradient(180deg,
+      hsla(var(--first-hue), var(--sat), var(--lig), 1),
+      hsla(var(--first-hue), var(--sat), var(--lig), .2));
+  border-radius: 10rem 10rem 1rem 1rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  overflow: hidden;
 }
 
 /*=============== BUTTONS ===============*/
