--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -259,7 +259,7 @@ img {
   font-weight: var(--font-medium);
 }
 
-.home__greeting{
+.home__greeting {
   display: block;
   color: var(--title-color);
   margin-bottom: .25rem;
@@ -270,16 +270,18 @@ img {
   margin-bottom: 2.5rem;
 }
 
-.home__name{
+.home__name {
   font-size: var(--biggest-font-size);
   /* font-weight: var(--font-semibold);
   color: var(--first-color);
   margin-bottom: 1rem; */
 }
-.home__img{
+
+.home__img {
   width: 160px;
 }
-.home__handle{
+
+.home__handle {
   justify-self: center;
   width: 190px;
   height: 293px;
@@ -293,21 +295,34 @@ img {
   overflow: hidden;
 }
 
-.home__buttons{
+.home__buttons {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
 }
+
 .home__social,
-.home__scroll{
+.home__scroll {
   position: absolute;
 }
-.home__social{
+
+.home__social {
   bottom: 5rem;
   left: 0;
   display: grid;
   row-gap: .5rem;
+}
+
+.home__social-link {
+  width: max-content;
+  background-color: var(--container-color);
+  color: var(--first-color);
+  padding: .25rem;
+  border-radius: .25rem;
+  display: flex;
+  font-size: 1rem;
+  transition: .4s;
 }
 
 /*=============== BUTTONS ===============*/
