--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -329,9 +329,16 @@ img {
   background-color: var(--first-color);
   color: rgb(255, 255, 255);
 }
-.home__social::after{
-  
+
+.home__social::after {
+  content: '';
+  width: 32px;
+  height: 2px;
+  background-color: var(--first-color);
+  transform: rotate(90deg) translate(16px, 3px);
+
 }
+
 /*=============== BUTTONS ===============*/
 
 
