--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -352,7 +352,14 @@ img {
 }
 
 /*=============== BUTTONS ===============*/
-
+.button{
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--body-color);
+  padding: .75rem 1rem;
+  border-radius: .5rem;
+  font-weight: var(--font-medium);
+}
 
 /*=============== ABOUT ===============*/
 
