--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,6 +136,7 @@ img {
   max-width: 968px;
   margin-left: 1rem;
   margin-right: 1rem;
+  
 }
 
 .grid {
@@ -359,7 +360,9 @@ img {
   padding: .75rem 1rem;
   border-radius: .5rem;
   font-weight: var(--font-medium);
+  transition: .4s;
 }
+
 
 /*=============== ABOUT ===============*/
 
