--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,11 +204,12 @@ img {
   position: fixed;
   bottom: 1rem;
   background-color: hsla(var(--second-hue), 32%, 16%, .8);
-  /* width: 90%;
-   */
+  
+  
   /* left: 43%; */
   border-radius: 4rem;
-  padding: rem 2.25rem;
+  padding: 1rem 2.25rem;
+  align-self: center;
   backdrop-filter: blur(10px);
   /* align-items: center; */
   /* align-items: right; */
@@ -384,7 +385,19 @@ img {
   font-weight: var(--font-medium);
   transition: .4s;
 }
-
+.button:hover{
+  background-color: var(--first-color-alt);
+  color: var(--body-color);
+}
+.button--ghost{
+  background-color: transparent;
+  color: var(--first-color);
+  border: 2px solid var(--first-color);
+  /* padding: .75rem 1rem;
+  border-radius: .5rem;
+  font-weight: var(--font-medium);
+  transition: .4s; */
+}
 /* 34.24 */
 /*=============== ABOUT ===============*/
 
