--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -420,6 +420,12 @@ img {
 
 }
 
+.about__box{
+  background-color: var(--container-color);
+  border-radius: .75rem;
+  padding: .75rem .5rem;
+  
+}
 
 /*=============== SKILLS ===============*/
 
