--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -457,7 +457,30 @@ img {
 
 /*=============== SKILLS ===============*/
 
+.skillss___container{
+  row-gap:2rrem;
+  padding-top:1rem;
+}
+.skillss___contentt{
+  background-color:var(--container-color);
+  padding: 1.5rem;
+  border-radius: 1.25rem;
+}
+.skills__title{
+  font-size:var(--normal-font-size);
+  font-weight:var(--font-medium);
+  color:var(--first-color);
+  text-align: center;
+  margin-bottom:1..5rem;
+}
 
+.skills__box{
+  display: flex;
+  justify-content: center;
+  column-gap: 2.8rem
+  ;
+
+}
 /*=============== SERVICES ===============*/
 
 
