--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -511,6 +511,11 @@ img {
 }
 
 /*=============== SERVICES ===============*/
+.services__container{
+  grid-template-columns: repeat(2,1fr);
+  gap: 1.5rem;
+  padding-top: 1rem;
+}
 
 
 /* Services modal */
