--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -523,6 +523,11 @@ img {
   padding: 3rem 1.5rem 1.5rem;
 }
 
+.services__title{
+  font-size: var(--h3-font-size);
+
+  margin-bottom: 2.5rem;
+}
 
 /* Services modal */
 
