--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -529,6 +529,16 @@ img {
   margin-bottom: 2.5rem;
 }
 
+.services__button{
+  color: var(--first-color);
+  font-size: var(--small-font-size);
+  display: flex;
+  align-items: center;
+  column-gap: .25rem;
+  cursor: pointer;
+}
+
+
 /* Services modal */
 
 
