--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -611,7 +611,10 @@ img {
 }
 /*Active modal*/
 
-
+.active-modal{
+  visibility: visible;
+  opacity: 1;
+}
 /*=============== WORK ===============*/
 
 
