--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -631,7 +631,10 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  column-gap: .75rem;
+  margin-bottom: 2rem;
 }
+
 
 /* Active item work*/
 
