--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -635,6 +635,14 @@ img {
   margin-bottom: 2rem;
 }
 
+.work__item{
+  cursor: pointer;
+  color: var(--title-color);
+  padding: .25rem .75rem;
+  font-weight: var(--font-medium);
+  border-radius: .5rem;
+}
+
 
 /* Active item work*/
 
