--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -669,6 +669,15 @@ img {
   column-gap: .25rem;
 }
 
+.work__button:hover .work__icon {
+  transform: translate(.25rem);
+}
+
+.work__icon {
+  font-size: 1rem;
+  transition: .4s;
+}
+
 /* Active item work*/
 
 
