--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -686,7 +686,16 @@ img {
 
 
 /*=============== TESTIMONIAL ===============*/
+.testimonial__card{
+  background-color: var(--container-color);
+  padding: 1.25rem 1.5rem;
+  border-radius: 1.5rem;
+  margin-bottom: 3rem;
+}
 
+.testimonial__img{
+  
+}
 
 /* Swiper class */
 
