--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -709,6 +709,13 @@ img {
 }
 
 /* Swiper class */
+.swiper-pagination-bullet {
+ background-color: var(--text-color-light);
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--first-color);
+ }
+ 
 
 
 /*=============== CONTACT ===============*/
