--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -686,55 +686,136 @@ img {
 
 
 /*=============== TESTIMONIAL ===============*/
-.testimonial__card{
+.testimonial__card {
   background-color: var(--container-color);
   padding: 1.25rem 1.5rem;
   border-radius: 1.5rem;
   margin-bottom: 3rem;
 }
 
-.testimonial__img{
+.testimonial__img {
   border-radius: 3rem;
   width: 60px;
   margin-bottom: 1rem;
 }
 
-.testimonial__name{
+.testimonial__name {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   margin-bottom: .25rem;
 }
-.testimonial__description{
+
+.testimonial__description {
   font-size: var(--small-font-size);
 }
 
 /* Swiper class */
 .swiper-pagination-bullet {
- background-color: var(--text-color-light);
+  background-color: var(--text-color-light);
 }
+
 .swiper-pagination-bullet-active {
   background-color: var(--first-color);
- }
- 
- .swiper-button-next-bullet {
+}
+
+.swiper-button-next-bullet {
   background-color: var(--text-color-light);
- }
+}
 
 
- .swiper-button-prev-bullet {
+.swiper-button-prev-bullet {
   background-color: var(--text-color-light);
- }
+}
 
- .swiper-button-prev-bullet-active {
+.swiper-button-prev-bullet-active {
   background-color: var(--first-color);
- }
- .swiper-button-next-bullet-active {
+}
+
+.swiper-button-next-bullet-active {
   background-color: var(--first-color);
- }
+}
 
 /*=============== CONTACT ===============*/
+.contact__container {
+  row-gap: 3rem;
+  padding-top: 3rem;
+}
 
+.contact__title {
+  text-align: center;
+  font-size: var(--h3-font-size);
+  margin-bottom: 1.5rem;
+}
 
+.contact__info {
+  display: grid;
+  gap: 1rem;
+}
+
+.contact__card {
+  background-color: var(--container-color);
+  padding: 1rem;
+  border-radius: .75rem;
+  text-align: center;
+}
+
+.contact__card-icon {
+  font-size: 2rem;
+  color: var(--title-color);
+  margin-bottom: .25rem;
+}
+
+.contact__card-title,
+.contact__card-data {
+  font-size: var(--small-font-size);
+}
+
+.contact__card-title {
+  font-weight: var(--font-medium);
+}
+
+.contact__card-data {
+  display: block;
+  margin-bottom: .75rem;
+}
+
+.contact__button {
+  color: var(--first-color);
+  font-size: var(--small-font-size);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: .25rem;
+}
+.contact__button:hover .contact__icon {
+  transform: translateX(.25rem);
+}
+
+.contact__button-icon {
+  font-size: 1rem;
+  transition: .4s;
+}
+.contact__form-div {
+
+  position: relative;
+  margin-bottom: 2rem;
+  height: 4rem;
+}
+
+.contact__form-input{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--text-color-light);
+  background: none;
+  color: var(--text-color);
+  outline: none;
+  padding: 1.5rem;
+  border-radius: .75rem;
+  z-index: 1;
+}
 /*=============== FOOTER ===============*/
 
 
