--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -871,6 +871,19 @@ img {
   margin-bottom: 2rem;
 }
 
+.footer__social{
+  display: flex;
+  justify-content: center;
+  column-gap: 1.25rem;
+}
+.footer__social-link{
+  background-color: var(--body-color);
+  color: var(--first-color);
+  padding: .25rem;
+  border-radius: .25rem;
+  font-size: 1rem;
+  display: inline-flex;
+}
 
 
 /*=============== SCROLL BAR ===============*/
